# Left-atrial-wall-from-CT

./: CMakeLists.txt  README.md  la_wall.cxx
